--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <div class="row">
                                 <div class="about-text padd-15">
                                     <h3>I'm Manojkumar.S and <span>Java Developer</span></h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit qui ad dolorum amet minus provident eligendi aut ab earum excepturi ullam atque, a dolor consequuntur nisi voluptates sequi nemo in. Veritatis autem officiis nulla incidunt voluptatibus quasi placeat distinctio accusantium dolor commodi eligendi delectus accusamus animi dolorem molestias quia consectetur voluptate, quibusdam pariatur eum inventore!</p>
+                                    <p>Highly proficient Java Developer with extensive problem-solving experience, demonstrated by solving over 450 coding challenges on LeetCode and HackerRank. Possesses a strong foundation in front-end technologies, including HTML, CSS, and JavaScript, complementing robust back-end development skills. Combines algorithmic expertise with practical web development knowledge to deliver efficient and scalable solutions.</p>
                                 </div>
                             </div>
                             <div class="row">
@@ -131,7 +131,7 @@
                             </div>
                             <div class="row">
                                 <div class="education1 padd-15">
-                                    <h3 class="title"><li>Education</li></h3>
+                                    <h3 class="title">Education</h3>
                                     <div class="row">
                                         <div class="timeline-box padd-15">
                                             <div class="timeline shadow-dark">
@@ -186,8 +186,8 @@
                                                         <i class="fa fa-calendar"></i>2020 - 2021
                                                     </h3>
                                                     <h4 class="timeline-title">CERTIFICATION</h4>
-                                                    <p class="timeline-text">NPTEL-JAVA with 47 persentage</p>
-                                                    <p class="timeline-text">NPTEL-CLOUD COMPUTING with 65 persentage</p>
+                                                    <p class="timeline-text">NPTEL-JAVA and CLOUD COMPUTING</p>
+                                                    <p class="timeline-text">ORACLE-GENERATIVE AI</p>
                                                 </div>
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
