--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
                                                     <h3 class="timeline-date">
                                                         <i class="fa fa-calendar"></i>2020 - 2021
                                                     </h3>
-                                                    <h4 class="timeline-title"></h4>
-                                                    <p class="timeline-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa omnis quaerat neque reiciendis ducimus, nihil hic quis excepturi qui. Cumque.</p>
+                                                    <h4 class="timeline-title">National and State Awards</h4>
+                                                    <p class="timeline-text">I proudly won the Gold Medal at the Goa National Championship and secured the Bronze Medal at the Madhura National Event, showcasing my dedication and excellence.</p>
                                                 </div>
                                             </div>
                                         </div>
