--- a/index.html
+++ b/index.html
@@ -194,8 +194,10 @@
                                                     <h3 class="timeline-date">
                                                         <i class="fa fa-calendar"></i>2020 - 2021
                                                     </h3>
-                                                    <h4 class="timeline-title">National and State Awards</h4>
-                                                    <p class="timeline-text">I proudly won the Gold Medal at the Goa National Championship and secured the Bronze Medal at the Madhura National Event, showcasing my dedication and excellence.</p>
+                                                    <h4 class="timeline-title">NATIONAL AND STATE AWARDS</h4>
+                                                    <p class="timeline-text">I proudly won the Gold Medal at the Goa National Kabaddi Championship and secured the Bronze Medal at the Madhura National Kabaddi Event, showcasing my dedication and excellence.</p>
+                                                    <h4 class="timeline-title">RAJYA PURASKAR FOR SCOUTS AND GUIDES</h4>
+                                                    <p class="timeline-text">I achieved the prestigious Rajyapuraskar Award, also known as the Scout Governor Award, during my schooling. This honor reflects my dedication, leadership, and service in scouting.</p>
                                                 </div>
                                             </div>
                                         </div>
