--- a/index.html
+++ b/index.html
@@ -314,6 +314,13 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="image/project4.png" alt="">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
