--- a/index.html
+++ b/index.html
@@ -226,10 +226,37 @@
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
+                                    <i class="fab fa-java"></i>
+                                </div>
+                                <h4>Java developer</h4>
+                                <p>Experienced in Java development, building efficient and scalable applications. Skilled in object-oriented programming and problem-solving.</p>
+                            </div>
+                        </div>
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fab fa-html5" ></i>
+                                </div>
+                                <h4>web designer</h4>
+                                <p>Experienced in web designing with HTML, CSS, and JavaScript, creating responsive and visually appealing websites. Skilled in crafting user-friendly interfaces with modern design principles.</p>
+                            </div>
+                        </div>
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fab fa-android"></i>
+                                </div>
+                                <h4>Android developer</h4>
+                                <p>Experienced in Android development using Android Studio, building efficient and user-friendly mobile applications. Skilled in UI design and performance optimization.</p>
+                            </div>
+                        </div>
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
                                     <i class="fab fa-github"></i>
                                 </div>
                                 <h4>My Github</h4>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate amet exercitationem delectus.</p>
+                                <p>https://github.com/Manojkumar2110</p>
                             </div>
                         </div>
                         <div class="service-item padd-15">
@@ -238,7 +265,7 @@
                                     <i class="fab fa-linkedin"></i>
                                 </div>
                                 <h4>Linked In</h4>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate amet exercitationem delectus.</p>
+                                <p>https://www.linkedin.com/in/97-manojkumar/</p>
                             </div>
                         </div>
                         <div class="service-item padd-15">
@@ -247,34 +274,7 @@
                                     <i class="fa fa-code"></i>
                                 </div>
                                 <h4>Leet Code</h4>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate amet exercitationem delectus.</p>
-                            </div>
-                        </div>
-                        <div class="service-item padd-15">
-                            <div class="service-item-inner">
-                                <div class="icon">
-                                    <i class="fa fa-cloud"></i>
-                                </div>
-                                <h4>web designer</h4>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate amet exercitationem delectus.</p>
-                            </div>
-                        </div>
-                        <div class="service-item padd-15">
-                            <div class="service-item-inner">
-                                <div class="icon">
-                                    <i class="fa fa-search"></i>
-                                </div>
-                                <h4>web designer</h4>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate amet exercitationem delectus.</p>
-                            </div>
-                        </div>
-                        <div class="service-item padd-15">
-                            <div class="service-item-inner">
-                                <div class="icon">
-                                    <i class="fa fa-bullhorn"></i>
-                                </div>
-                                <h4>web designer</h4>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate amet exercitationem delectus.</p>
+                                <p>Successfully solved 450+ problems on LeetCode, demonstrating strong problem-solving and algorithmic skills. Proficient in data structures, algorithms, and competitive coding.</p>
                             </div>
                         </div>
                     </div>
