--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                                         <i class="fa fa-calendar"></i>2021 - 2025
                                                     </h3>
                                                     <h4 class="timeline-title"> UG(B.Tech Information Technology)</h4>
-                                                    <p class="timeline-text">I an currently pursuing my UG in B.Tech with current CGPA of 8.0@VSB Engineering College,Karur.
+                                                    <p class="timeline-text">I am currently pursuing my UG in B.Tech with current CGPA of 8.0@VSB Engineering College,Karur.
                                                     </p>
                                                 </div>
                                             </div>
@@ -169,7 +169,7 @@
                                     </div>
                                 </div>
                                 <div class="education2 padd-15">
-                                    <h3 class="title">Certification & Achivements</h3>
+                                    <h3 class="title">Certification & Achievement</h3>
                                     <div class="row">
                                         <div class="timeline-box padd-15">
                                             <div class="timeline shadow-dark">
